test/source/errors/init-dupe-addr.hc
// This file attempts to declare two predefined floor slots using the
// same floor address. This should cause an error during compilation.

init foo @ 0
init bar @ 0

output foo
